--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>MiniStairs - 3D Resource Pack</title>
+
+  <style>
+
+    body {
+      background: #2c2f35;
+      color: #eee;
+      font-family: sans-serif;
+      text-align: center;
+    }
+
+    h1 {
+      color: #009c9b;
+      font-size: 2em;
+      font-style: italic;
+    }
+
+    a {
+      background: #eee;
+      color: #2c2f35;
+      font-size: 1.3em;
+      font-weight: bold;
+      padding: .25em;
+    }
+
+    a:hover {
+      color: #009c9b;
+    }
+
+    img {
+      width: 90%;
+    }
+
+  </style>
 </head>
 <body>
+
+  <h1>MiniStairs</h1>
+  <h2>A 3D Resource Pack that replaces stairs with slopes!</h2>
+
+  <p>
+    <a href="">Download (1.8+)</a>
+    <a href="">MinecraftForum</a>
+    <a href="https://github.com/lasercar/ministairs">GitHub</a>
+  </p>
+
+  <hr>
+
+  <p>
+    <img src="showcase.png" alt="showcase image" />
+    <p>Compatible with other resource packs!</p>
+    <img src="showcase-combo.png" alt="showcase combo image" />
+  </p>
+
+  <p>I wrote this as a fun experiment, feel free use it in whatever ways you wish! :)</p>
+
+  <i>(c) Copyright 2015 Lasercar7. MIT License.</i>
 
 </body>
 </html>
