add link to download

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <h2>A 3D Resource Pack that replaces stairs with slopes!</h2>
 
   <p>
-    <a href="">Download (1.8+)</a>
-    <a href="">MinecraftForum</a>
+    <a href="https://github.com/lasercar/ministairs/releases/download/1.0/MiniStairs-1.8.zip">Download (1.8+)</a>
+    <!-- <a href="">MinecraftForum</a> -->
     <a href="https://github.com/lasercar/ministairs">GitHub</a>
   </p>
 
@@ -58,7 +58,7 @@
     <img src="showcase-combo.png" alt="showcase combo image" />
   </p>
 
-  <p>I wrote this as a fun experiment, feel free use it in whatever ways you wish! :)</p>
+  <p>I wrote this as a fun experiment, feel free to use it in whatever ways you wish! :)</p>
 
   <i>(c) Copyright 2015 Lasercar7. MIT License.</i>
 
