--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
 
   <p>
     <a href="https://github.com/lasercar/ministairs/releases/download/1.0/MiniStairs-1.8.zip">Download (1.8+)</a>
-    <!-- <a href="">MinecraftForum</a> -->
+    <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/2466378-ministairs-replaces-stairs-with-3d-slopes">MinecraftForum</a>
     <a href="https://github.com/lasercar/ministairs">GitHub</a>
   </p>
 
   <hr>
 
   <p>
+    <p>Works with all stairs, including corners and upside-down!</p>
     <img src="showcase.png" alt="showcase image" />
     <p>Compatible with other resource packs!</p>
     <img src="showcase-combo.png" alt="showcase combo image" />
