--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <img src="showcase-combo.png" alt="showcase combo image" />
   </p>
 
-  <p>I wrote this as a fun experiment, feel free to use it in whatever ways you wish! :)</p>
+  <p>I created this as a fun experiment, feel free to use it in whatever ways you wish! :)</p>
 
   <i>(c) Copyright 2015 Lasercar7. MIT License.</i>
 
