--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <a href="https://github.com/lasercar/ministairs">GitHub</a>
   </p>
 
+  shortlink: <a href="http://git.io/ministairs">git.io/ministairs</a>
+
   <hr>
 
   <p>
