differentiate link styling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     }
 
     a {
+      color: #eee;
+    }
+
+    a.button {
       background: #eee;
       color: #2c2f35;
       font-size: 1.3em;
@@ -47,9 +51,9 @@
   <h2>A 3D Resource Pack that replaces stairs with slopes!</h2>
 
   <p>
-    <a href="https://github.com/lasercar/ministairs/releases/download/1.0/MiniStairs-1.8.zip">Download (1.8+)</a>
-    <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/2466378-ministairs-replaces-stairs-with-3d-slopes">MinecraftForum</a>
-    <a href="https://github.com/lasercar/ministairs">GitHub</a>
+    <a class="button" href="https://github.com/lasercar/ministairs/releases/download/1.0/MiniStairs-1.8.zip">Download (1.8+)</a>
+    <a class="button" href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/2466378-ministairs-replaces-stairs-with-3d-slopes">MinecraftForum</a>
+    <a class="button" href="https://github.com/lasercar/ministairs">GitHub</a>
   </p>
 
   shortlink: <a href="http://git.io/ministairs">git.io/ministairs</a>
