--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <img src="showcase-combo.png" alt="showcase combo image" />
   </p>
 
-  <p>I created this as a fun experiment, feel free to use it or reuse it in whatever ways you wish! :)</p>
+  <p>I created this as a fun experiment, feel free to use, reuse, or mangle it in whatever ways you wish! :)</p>
 
   <i>(c) Copyright 2015 <a href="http://lasercar.github.io">Lasercar7</a>. MIT License.</i>
 
