--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <h2>A 3D Resource Pack that replaces stairs with slopes!</h2>
 
   <p>
-    <a class="button" href="https://github.com/lasercar/ministairs/releases/download/1.0/MiniStairs-1.8.zip">Download (1.8+)</a>
+    <a class="button" href="https://github.com/lasercar/ministairs/releases/download/1.0/MiniStairs-1.8.zip">Download (1.8)</a>
     <a class="button" href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/2466378-ministairs-replaces-stairs-with-3d-slopes">MinecraftForum</a>
     <a class="button" href="https://github.com/lasercar/ministairs">GitHub</a>
   </p>
